--- a/Exercicios/ex022/fundo004.html
+++ b/Exercicios/ex022/fundo004.html
@@ -12,6 +12,7 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed; 
             height: 98vh;
         }
         main{
@@ -19,7 +20,7 @@
             border: 1px solid black;
             border-radius: 20px;
             padding: 10px;
-            width: 400px;
+            width: 300px;
             margin: auto;
         }
         h1{
