--- a/Exercicios/ex023/tabela001.html
+++ b/Exercicios/ex023/tabela001.html
@@ -9,12 +9,15 @@
         table{
             font-family: Arial, Helvetica, sans-serif;
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
         }
 
         td{
             border: 1px solid black;
             padding: 8px;
+            text-align: center;
+            vertical-align: middle;
         }
     </style>
 </head>
