Estudos de iFrame

--- a/Exercicios/ex024/iframe001.html
+++ b/Exercicios/ex024/iframe001.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de Iframes</title>
+    <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 16px;
+        }
+
+        #tela{
+            width: 100%;
+            border: none;
+            background-color: lightgray;
+            height: max-content;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Faça uma escolah</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt quidem odio voluptatem modi tenetur perspiciatis ea porro, quos dicta dolore qui sed aliquam alias reiciendis natus? Aliquam rem animi voluptatum.</p>
+
+    <ul>
+        <li><a href="pagina01.html" target="frame">Primeiro Link</a></li>
+        <li><a href="pagina02.html" target="frame">Segundo Link</a></li>
+        <li><a href="pagina03.html" target="frame">Terceiro Link</a></li>
+    </ul>
+
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo aliquid a quia. Natus provident nemo dolor reprehenderit voluptates beatae ab adipisci amet? Accusantium debitis, quae quidem provident totam perferendis adipisci.</p>
+
+    <iframe id="tela" name="frame" src="">
+        <p>Incompatibilidade detectada!</p>
+    </iframe>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius unde quasi impedit voluptatum, doloremque pariatur dicta tempore. Est delectus voluptate amet nihil officiis dolore quo! Quia incidunt quis debitis placeat?</p>
 </body>
 </html>
