Estudos de iframes

--- a/Exercicios/ex024/iframe001.html
+++ b/Exercicios/ex024/iframe001.html
@@ -15,6 +15,7 @@
             border: none;
             background-color: lightgray;
             height: max-content;
+            border: 1px solid black
         }
     </style>
 </head>
