--- a/Exercicios/ex026/mq004/index.html
+++ b/Exercicios/ex026/mq004/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="estilo/style.css" media="all">
 </head>
 <body>
-    
+    <h1>Testando Media Queries</h1>
+    <img src="imagens/icon-phone.png" alt="Acessando Via Smartphone">
+    <img src="imagens/icon-tablet.png" alt="Acesso Via Tablet">
+    <img src="imagens/icon-print.png" alt="Versão para Imrpressão">
+    <img src="imagens/icon-pc.png" alt="Versão para Desktop">
+    <img src="imagens/icon-tv.png" alt="Versão para TV">
 </body>
 </html>
