--- a/Exercicios/ex026/mq004/index.html
+++ b/Exercicios/ex026/mq004/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
     <link rel="stylesheet" href="estilo/style.css" media="all">
+    <link rel="stylesheet" href="estilo/media-query.css">
 </head>
 <body>
-    <h1>Testando Media Queries</h1>
-    <img src="imagens/icon-phone.png" alt="Acessando Via Smartphone">
-    <img src="imagens/icon-tablet.png" alt="Acesso Via Tablet">
-    <img src="imagens/icon-print.png" alt="Versão para Imrpressão">
-    <img src="imagens/icon-pc.png" alt="Versão para Desktop">
-    <img src="imagens/icon-tv.png" alt="Versão para TV">
+    <main>
+        <h1>Testando Media Queries</h1>
+        <img id="phone" src="imagens/icon-phone.png" alt="Acessando Via Smartphone">
+        <img id="tablet" src="imagens/icon-tablet.png" alt="Acesso Via Tablet">
+        <img id="print" src="imagens/icon-print.png" alt="Versão para Imrpressão">
+        <img id="pc" src="imagens/icon-pc.png" alt="Versão para Desktop">
+        <img id="tv" src="imagens/icon-tv.png" alt="Versão para TV">
+    </main>
 </body>
 </html>
